main/src/objects/Sessions__c.object
<CustomObject>
    <fields>
        <fullName>CSAT_Score__c</fullName>
        <label>CSAT Score</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Event_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Public Event Name</label>
        <referenceTo>Public_Event__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Capacity__c</fullName>
        <label>Room Capacity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date_Time__c</fullName>
        <label>Session Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Speaker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>